--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,33 @@ body{
     font-family: 'Roboto Mono';
     background-color: rgb(44, 59, 70);
     color: rgb(234, 139, 15);
+    font-size: 16px;
 }
+/* h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
+
+p {
+    margin: 0;
+}
+
+ul,
+ol {
+    margin: 0;
+    padding-left: 0%;
+} */
+
+/* img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    
+} */
 .header{
     width: 100%;
     height: 120px;
@@ -11,7 +37,7 @@ body{
 }
 .sidebar{
    
-    padding: 20px 50px 50px;
+    padding:40px  30px 40px 40px;
     width: 300px;
 
 }
@@ -24,23 +50,41 @@ img{
 }
 .list{
     list-style: none;
+    padding: 0;
   
 }
 .main-content {
-    padding: 20px;
+ 
     display: flex;
     flex-direction: row;
-    width: 1200px;
+    width: 900px;
+  
   
 }
 .link{
     text-decoration: none;
     color: rgb(145, 111, 176);
+    fill: currentColor;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 .link:hover,
 .link:focus{
     color: chartreuse;
+    fill: chartreuse;
 }
 .contact{
     display: flex;
+}
+.main-container{
+   padding: 20px;
+    width: 600px;  
+}
+.icon{
+    fill: rgb(234, 139, 15);
+     padding-right: 10px;
+  
+}
+.icon-contact{
+     padding-right: 10px;
 }
